# fullstack-monorepo

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env  .env.example  README.md  pyproject.toml
backend/app/: auth.py  db.py  deps.py  main.py  routes_profiles.py
backend/app/profiles/: repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_profiles_api.py
frontend/: next.config.ts  package-lock.json
frontend/app/: page.tsx
frontend/lib/supabase/: proxy.ts
supabase/: config.toml
supabase/migrations/: 20260219164013_create_profiles.sql
